kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 100%
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: docker.cluster.absol.in/api:v1
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: registry-secret
